# youtube-knowledge-pack

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-03-14-youtube-knowledge-pack.md
src/youtube_knowledge_pack/: __init__.py  cli.py  pipeline.py
tests/: test_pipeline.py
