[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-knowledge-pack"
version = "0.1.0"
description = "Build agent-friendly knowledge packs from YouTube videos"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
youtube-knowledge-pack = "youtube_knowledge_pack.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
